# querymt

./: .gitignore  0.4.0.json  0.4.1.json  0.5.0.json  0.5.1.json  0.5.2.json  AGENTS.md  Cargo.toml  Dockerfile.provider  README.md  flake.nix  install.ps1  install.sh  latest.json  providers.example.toml  stable.json  tools-policy.example.toml  versions.json
crates/agent/: Cargo.toml  build.rs
crates/agent/benches/: agent_startup.rs  dedup_check.rs  session_list_view.rs
crates/agent/examples/: acp_agent.rs  acp_mcp_server.rs  acp_server.rs  agent_tools.rs  auto_delegation_example.rs  closure_builder.rs  coder_agent.rs  event_stream.rs  export_atif.rs  export_sft.rs  from_config.rs  morning_brief.rs  qmtcode.rs  replay_session.rs  web_dashboard.rs
crates/agent/examples/confs/: coder_agent.toml  coder_delegate.toml  hook_guarded_coder.toml  learning_pair.toml  multi_agent.toml  research_journal.toml  single_agent.toml  single_coder.toml  standup_bot.toml  watchdog.toml
crates/agent/examples/hooks/: approve-safe-shell.sh  check-shell.sh  stop-verify.sh
crates/agent/examples/prompts/: code_meta.jinja2  coder.md  default_system.txt  learning_pair.txt  planner.md  research_journal.txt  standup_bot.txt  watchdog.txt
crates/agent/src/: agent.rs  config.rs  delegation.rs  elicitation.rs  error.rs  event_bus.rs  event_fanout.rs  event_sink.rs  events.rs  hash.rs  lib.rs  middleware.rs  model.rs  model_heuristics.rs  model_info.rs  model_inventory.rs  model_registry.rs  plugin_update.rs  prelude.rs  profiles.rs  quorum.rs  runner.rs  send_agent.rs  server.rs  tasks.rs  template.rs  workspace_query.rs
crates/agent/src/acp/: client_bridge.rs  cwd.rs  mod.rs  protocol.rs  session_load_snapshot_tests.rs  shared.rs  shutdown.rs  stdio.rs  trace_context.rs  transport.rs  websocket.rs  websocket_tests.rs
crates/agent/src/agent/: agent_config.rs  agent_config_builder.rs  builder.rs  core.rs  delegation_loop_tests.rs  execution.rs  handle.rs  (+23 more)
crates/agent/tests/: hybrid_id_scheme_test.rs  model_switching_preserves_system_prompt_test.rs  sandbox_e2e.rs  set_planning_context_preserves_custom_params_test.rs
crates/agent/ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: auth.rs  chat.rs  cli_args.rs  embed.rs  main.rs  mcp_cache.rs  mcp_registry.rs  provider.rs  secret_store.rs  tracing.rs  utils.rs
crates/openai/: Cargo.toml
crates/openai/src/: lib.rs
crates/providers/alibaba/: Cargo.toml
crates/providers/anthropic/: Cargo.toml
crates/providers/codex/: Cargo.toml
crates/providers/google/: Cargo.toml
crates/providers/izwi/: Cargo.toml
crates/providers/kimi-code/: Cargo.toml
crates/providers/llama-cpp/: Cargo.toml
crates/providers/llama_cpp/: Cargo.toml
crates/providers/mistral/: Cargo.toml
crates/providers/moonshot/: Cargo.toml
crates/providers/mrs/: Cargo.toml
crates/providers/ollama/: Cargo.toml
crates/providers/openai/: Cargo.toml
crates/providers/openrouter/: Cargo.toml
crates/providers/proxy/: Cargo.toml
crates/py/querymt-agent-py/: Cargo.toml  README.md  pyproject.toml
crates/querymt/: Cargo.toml
crates/querymt-extism-macros/: Cargo.toml
crates/querymt-extism-macros/src/: lib.rs
crates/querymt-mobile-ffi/: Cargo.toml
crates/querymt-mobile-ffi/include/: querymt_mobile_ffi.h
crates/querymt-mobile-ffi/src/: agent.rs  events.rs  ffi_helpers.rs  lib.rs  mcp.rs  mesh.rs  models.rs  prompt.rs  providers.rs  runtime.rs  session.rs  state.rs  types.rs
crates/querymt-python/: Cargo.toml  README.md  pyproject.toml
crates/querymt-python/examples/: share_provider.py
crates/querymt-python/src/: lib.rs
crates/querymt-remote/: Cargo.toml
crates/querymt-remote/examples/: share_openai.rs
crates/querymt-remote/src/: identity.rs  invite.rs  lib.rs  mesh_bootstrap.rs  mesh_client.rs  mesh_config.rs  mesh_events.rs  mesh_handle.rs  mesh_routes.rs  mesh_runtime.rs  mesh_runtime_config.rs  mesh_runtime_support.rs  mesh_state.rs  names.rs  node_id.rs  provider_backend.rs  provider_backend_helpers.rs  provider_catalog.rs  provider_client.rs  provider_client_runtime.rs  provider_host_actor.rs  provider_host_error.rs  provider_host_support.rs  provider_protocol.rs  provider_share.rs  provider_stream_router.rs  provider_stream_state.rs  provider_transport.rs  qr.rs  remote_chat_provider.rs  request_timeout.rs  runtime_handle.rs  runtime_helpers.rs  scope.rs  stream_router_protocol.rs
crates/querymt-service/: Cargo.toml  README.md  cli-providers.toml
crates/querymt-service/src/: main.rs
crates/querymt-utils/: Cargo.toml
crates/querymt-utils/src/: lib.rs  oauth.rs  providers.rs  secret_store.rs  str_utils.rs  telemetry.rs
crates/querymt/examples/: README.md  anthropic_example.rs  anthropic_thinking_example.rs  anthropic_vision_example.rs  chain_example.rs  evaluation_example.rs  evaluator_parallel_example.rs  google_embedding_example.rs  google_example.rs  google_image.rs  google_pdf.rs  google_pdf_example.rs  google_structured_output_example.rs  google_vision_example.rs  groq_claude_pipeline_example.rs  groq_example.rs  list_models_example.rs  multi_backend_example.rs  ollama_example.rs  ollama_structured_output_example.rs  ollama_wasm.rs  openai_embedding_example.rs  openai_example.rs  openai_reasoning_example.rs  openai_structured_output_example.rs  openai_vision_example.rs  stt_example.rs  tool_calling_example.rs  tts_example.rs  unified_tool_calling_example.rs  validator_example.rs  xai_example.rs  xai_structured_output_example.rs
crates/querymt/src/: adapters.rs  auth.rs  builder.rs  dynamic.rs  error.rs  lib.rs  model.rs  outbound.rs  params.rs  pricing.rs  provider_config.rs  tool_decorator.rs  validated_llm.rs
crates/service-client/: Cargo.toml
crates/service-client/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: config.rs  extension.rs  lib.rs  main.rs
crates/worker/tests/: worker_config_test.rs
examples/querymt_actix_cancel/: Cargo.toml
examples/querymt_actix_cancel/src/: main.rs
(+1505 files in other folders)
