[workspace]
resolver = "2"
members = [
    "crates/querymt",
    "crates/cli",
    "crates/providers/*",
]

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-value = "0.7 "
either = { version = "1.15.0", features = ["serde"] }
http = "1.0"
base64 = "0.22.1"
url = { version = "2.5", features = ["serde"] }
schemars = "0.8"
futures = "0.3"
log = "0.4"
extism-pdk = "1.4.0"
tracing = "0.1"
