[workspace]
resolver = "2"
members = [
    "crates/agent",
    "crates/querymt",
    "crates/cli",
    "crates/provider-common",
    "crates/querymt-utils",
    "crates/providers/*", "crates/querymt-extism-macros",
    "crates/sandbox",
    "crates/worker",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order", "raw_value"] }
serde-value = "0.7"
either = { version = "1.15.0", features = ["serde"] }
http = "1.0"
base64 = "0.22.1"
url = { version = "2.5", features = ["serde"] }
schemars = "0.8"
futures = "0.3"
log = "0.4"
extism-pdk = "1.4"
tracing = "0.1"
http-serde-ext = "1.0"
regex = "1"
heck = "0.5"
dirs = "6"
hf-hub = { version = "0.5", default-features = false, features = [ "rustls-tls", "tokio", "ureq"] }
