[package]
name = "querymt-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Agent and Session management for querymt"

[features]
default = []
# Enables the web dashboard UI with React frontend
# Locally, the build script uses bun (or npm fallback) to build UI assets.
# Packagers can bypass runtime installs by setting QMT_UI_DIST to a prebuilt dist/.
dashboard = []
# Enables OAuth token support for authentication (reads tokens from system keyring)
oauth = ["querymt-utils/oauth"]

# Enable DBus Secret Service backend for keyring on Linux.
# This mirrors the CLI's `dbus-secret-service` feature, but is wired through the agent crate.
dbus-secret-service = ["oauth", "querymt-utils/dbus-secret-service"]

# Enables kameo remote actor support for cross-machine session management.
# Adds libp2p-based P2P networking, mDNS peer discovery, and Kademlia DHT
# for distributed actor registry. SessionActorRef gains a Remote variant.
remote = ["kameo/remote", "dep:libp2p"]

[dependencies]
querymt = { path = "../querymt", default-features = false, features = ["extism_host", "mcp", "native", "tracing"] }
querymt-provider-common = { path = "../provider-common" }
querymt-utils = { path = "../querymt-utils", features = ["providers", "serde"] }
agent-client-protocol = { version = "0.9", features = ["unstable"] }
agent-client-protocol-schema = { version = "0.10", features = ["unstable"]}
kameo = "0.19"
libp2p = { version = "0.56", optional = true, default-features = false }
async-trait.workspace = true
anyhow = "1.0"
thiserror = "2.0"
log.workspace = true
tracing = { version = "0.1", features = ["attributes", "release_max_level_debug"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli", "deflate"] }
rusqlite = { version = "0.37", features = ["bundled", "uuid", "time"] }
time = { version = "0.3", features = ["serde", "formatting", "macros", "local-offset"] }
uuid = { version = "1.18", features = ["v4", "v7"] }
rapidhash = "4.2"
ignore = "0.4.25"
notify = "8"
glob = "0.3"
arc-swap = "1.7"
grep = "0.4"
grep-searcher = "0.1"
grep-regex = "0.1"
similar = "2.7"
strsim = "0.11"
once_cell = "1.21"
parking_lot = "0.12"
moka = { version = "0.12", features = ["future"] }

pathdiff = "0.2"
patchkit = "0.2"
gitpatch = "0.7"
rmcp = { version = "0.9", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "transport-sse-client-reqwest", "reqwest"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
rust-embed = { version = "8.6", features = ["axum"] }
tokio-stream = { version = "0.1", features = ["sync"] }
mime_guess = "2.0"
futures-util = "0.3"
toml = "0.9"
minijinja = { version = "2", default-features = false, features = ["serde"] }
iana-time-zone = "0.1"
regex.workspace = true
srgn = "0.14"
tokio-util = { version = "0.7", features = ["compat"] }
base64.workspace = true
infer = "0.16"
rayon = "1.11"
indexmap = { version = "2", features = ["serde"] }
gray_matter = "0.3"
fast_html2md = { package = "fast_html2md", version = "0.0.58", features = ["scraper"] }

# Markdown Query cli tool for agent `mdq` tool
mdq = "0.9.0"

# Snapshot backend support
gix = { version = "0.78", default-features = false, features = ["basic", "worktree-mutation", "attributes"] }
dirs.workspace = true

# OAuth support (optional, feature-gated) - now provided by querymt-utils

# Code similarity detection (local fork with tree-sitter 0.25)
similarity-core = { git = "https://github.com/querymt/similarity.git", branch = "tree_sitter_update" }
similarity-rs = { git = "https://github.com/querymt/similarity.git", branch = "tree_sitter_update" }
similarity-py = { git = "https://github.com/querymt/similarity.git", branch = "tree_sitter_update" }

# Rust AST parsing for rich structural fingerprinting during function indexing
syn = { version = "2", features = ["full", "visit"] }

[lib]
name = "querymt_agent"
path = "src/lib.rs"

[dev-dependencies]
mockall = "0.14"
env_logger = "0.11"
tempfile = "3.0"
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
criterion = { version = "0.8", features = ["async_tokio"] }

[[bench]]
name = "agent_startup"
harness = false

[[bench]]
name = "session_list_view"
harness = false
