[package]
name = "querymt-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent and Session management for querymt"

[features]
default = []
# Enables the API UI server for alternate clients over /ui/ws.
api = []
# Enables the web dashboard UI with React frontend assets.
# Locally, the build script uses bun (or npm fallback) to build UI assets.
# Packagers can bypass runtime installs by setting QMT_UI_DIST to a prebuilt dist/.
dashboard = ["api"]
# Enables OAuth token support for authentication (reads tokens from system keyring)
oauth = ["querymt-utils/oauth"]

# Enable DBus Secret Service backend for keyring on Linux.
# This mirrors the CLI's `dbus-secret-service` feature, but is wired through the agent crate.
dbus-secret-service = ["querymt-utils/dbus-secret-service"]

# Enables kameo remote actor support for cross-machine session management.
# Adds libp2p-based P2P networking, mDNS peer discovery, and Kademlia DHT
# for distributed actor registry. SessionActorRef gains a Remote variant.
remote = ["kameo/remote", "dep:libp2p"]

# Extends `remote` with iroh-backed QUIC transport for NAT traversal and
# relay-based connectivity across the internet.  Adds invite-token support
# for dynamic mesh joining.
remote-internet = ["remote", "dep:libp2p-iroh", "dep:qrcode"]

[dependencies]
typeshare = "1.0"
querymt = { path = "../querymt", default-features = false, features = ["extism_host", "mcp", "native", "tracing"] }
querymt-provider-common = { path = "../provider-common" }
querymt-utils = { path = "../querymt-utils", features = ["providers", "serde", "secret-store"] }
agent-client-protocol = { version = "0.11", features = ["unstable"] }
agent-client-protocol-schema = { version = "0.13", features = ["unstable"]}
kameo = "0.20"
libp2p = { version = "0.56", optional = true, default-features = false }
libp2p-iroh = { git = "https://github.com/querymt/libp2p-iroh.git", branch = "iroh_098", optional = true }
qrcode = { version = "0.14", optional = true }
async-trait.workspace = true
anyhow = "1.0"
thiserror = "2.0"
log.workspace = true
tracing = { version = "0.1", features = ["attributes", "release_max_level_debug"] }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "gzip", "brotli", "deflate"] }
rusqlite = { version = "0.39", features = ["bundled", "uuid", "time"] }
time = { version = "0.3", features = ["serde", "formatting", "macros", "local-offset"] }
uuid = { version = "1.18", features = ["v4", "v7"] }
rapidhash = "4.2"
ignore = "0.4.25"
notify = "8"
glob = "0.3"
arc-swap = "1.7"
grep-searcher = "0.1"
grep-regex = "0.1"
strsim = "0.11"
once_cell = "1.21"
parking_lot = "0.12"
moka = { version = "0.12", features = ["future"] }

imara-diff = "0.2"
rmcp = { version = "1.0", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "elicitation", "reqwest"] }
axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rust-embed = { version = "8.6", features = ["axum"] }
tokio-stream = { version = "0.1", features = ["sync"] }
mime_guess = "2.0"
futures-util = "0.3"
toml.workspace = true
minijinja = { version = "2", default-features = false, features = ["serde"] }
iana-time-zone = "0.1"
regex.workspace = true
tokio-util = { version = "0.7", features = ["compat"] }
base64.workspace = true
hex = "0.4"
infer = "0.19"
rayon = "1.11"

# Unix process-group cleanup on cancellation (shell tool)
imagesize = "0.14"

# NLP: multilingual stopwords, stemming, language detection
stop-words = "0.10"
rust-stemmers = "1.2"
whatlang = "0.18"
indexmap = { version = "2", features = ["serde"] }
gray_matter = "0.3"
fast_html2md = { package = "fast_html2md", version = "0.0.62", features = ["scraper"] }

# Markdown Query cli tool for agent `mdq` tool
mdq = "0.10.0"

# Snapshot backend support
gix = { version = "0.83", default-features = false, features = ["basic", "worktree-mutation", "attributes"] }
dirs.workspace = true

# OAuth support (optional, feature-gated) - now provided by querymt-utils

# Code similarity detection (local fork with tree-sitter 0.26)
similarity-core = { git = "https://github.com/querymt/similarity.git", branch = "tree_sitter_update" }
similarity-rs = { git = "https://github.com/querymt/similarity.git", branch = "tree_sitter_update" }
similarity-py = { git = "https://github.com/querymt/similarity.git", branch = "tree_sitter_update" }

# Tree-sitter grammars for the `index` tool (outline extraction).
# These crates are already compiled transitively via similarity-*; listing them
# here lets outline_index use the raw tree-sitter API directly.
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-elixir = "0.3"

# Rust AST parsing for rich structural fingerprinting during function indexing
syn = { version = "2", features = ["full", "visit"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lib]
name = "querymt_agent"
path = "src/lib.rs"

[dev-dependencies]
mockall = "0.14"
env_logger = "0.11"
tempfile = "3.0"
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
criterion = { version = "0.8", features = ["async_tokio"] }

[[bench]]
name = "agent_startup"
harness = false

[[bench]]
name = "session_list_view"
harness = false
