[package]
name = "querymt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for querymt."
authors = [
    "Viktor Gal <viktor@query.mt>"
]
repository = "https://github.com/querymt/querymt"
homepage = "https://query.mt"

[features]
default = []
dbus-secret-service = ["querymt-utils/dbus-secret-service", "querymt-service-client?/dbus-secret-service"]
service = ["dep:querymt-service-client"]

[dependencies]
anyhow = "1.0"
querymt = { path = "../querymt", default-features = false, features = ["desktop"] }
querymt-utils = { path = "../querymt-utils", features = ["secret-store", "oauth", "providers"] }
querymt-service-client = { path = "../service-client", optional = true }
url.workspace = true
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
rustyline = "18"
rustyline-derive = "0.12"
colored = "3.0"
spinners = "4.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
log.workspace = true
dirs = "6.0"
toml.workspace = true
futures = "0.3"
async-trait = "0.1"
open = "5"

tracing.workspace = true

[[bin]]
name = "qmt"
path = "src/main.rs"
