[package]
name = "qmt-openai"
version = "0.1.0"
edition = "2021"

[features]
default = ["extism"]
api = ["querymt"]
native = ["querymt"]
extism = ["extism-pdk", "querymt", "querymt/extism_plugin"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
querymt = { path = "../querymt", default-features = false, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
either = { workspace = true }
url = { workspace = true }
schemars = { workspace = true }
http = { workspace = true }
log = { workspace = true }
extism-pdk = { workspace = true, optional = true }
