[package]
name = "querymt-extism-macros"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[dependencies]
querymt = { path = "../querymt", default-features = false, features = ["extism_plugin"] }
http.workspace = true
serde.workspace = true
serde_json.workspace = true
extism-pdk.workspace = true
http-serde-ext.workspace = true
base64.workspace = true
