[package]
name = "querymt-mobile-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mobile FFI crate exposing a stable C ABI for iOS and Android QueryMT bindings"

[features]
default = ["remote", "remote-internet", "provider-anthropic", "provider-openai"]

# Remote agent / mesh support
remote = ["querymt-agent/remote"]
remote-internet = ["remote", "querymt-agent/remote-internet"]

# Static provider registration for mobile
provider-anthropic = ["dep:qmt-anthropic"]
provider-openai = ["dep:qmt-openai"]

# Future providers (can be added independently)
# provider-google = ["dep:qmt-google"]
# provider-groq = ["dep:qmt-groq"]
# provider-ollama = ["dep:qmt-ollama"]

[lib]
name = "querymt_mobile_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
querymt = { path = "../querymt", default-features = false, features = ["extism_host", "mcp", "native", "tracing"] }
querymt-agent = { path = "../agent", default-features = false }
querymt-utils = { path = "../querymt-utils", features = ["providers", "serde", "secret-store"] }

# Agent client protocol for session/prompt types
agent-client-protocol = { version = "0.11", features = ["unstable"] }
agent-client-protocol-schema = { version = "0.12", features = ["unstable"]}

# Provider crates for static registration
qmt-anthropic = { path = "../providers/anthropic", optional = true, default-features = false, features = ["api"] }
qmt-openai = { path = "../providers/openai", optional = true, default-features = false, features = ["api"] }

serde.workspace = true
serde_json.workspace = true
log.workspace = true
tracing.workspace = true
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "macros"] }
once_cell = "1.20"
parking_lot = "0.12"
libp2p = { version = "0.56", optional = true, default-features = false }

[build-dependencies]
