[package]
name = "querymt-mobile-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mobile FFI crate exposing a stable C ABI for iOS and Android QueryMT bindings"

[features]
default = ["remote", "provider-anthropic", "provider-openai", "provider-google", "provider-deepseek"]

# Remote agent / mesh support
remote = ["querymt-agent/plugin-host-only", "querymt-agent/remote"]

# Static provider registration for mobile
provider-anthropic = ["dep:qmt-anthropic"]
provider-openai = ["dep:qmt-openai"]
provider-google = ["dep:qmt-google"]
provider-deepseek = ["dep:qmt-deepseek"]

# Future providers (can be added independently)
# provider-groq = ["dep:qmt-groq"]
# provider-ollama = ["dep:qmt-ollama"]

[lib]
name = "querymt_mobile_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
querymt = { path = "../querymt", default-features = false, features = ["runtime"] }
querymt-agent = { path = "../agent", default-features = false }
querymt-utils = { path = "../querymt-utils", features = ["providers", "serde", "secret-store"] }

# Provider crates for static registration
qmt-anthropic = { path = "../providers/anthropic", optional = true, default-features = false, features = ["api"] }
qmt-openai = { path = "../providers/openai", optional = true, default-features = false, features = ["api"] }
qmt-google = { path = "../providers/google", optional = true, default-features = false, features = ["api"] }
qmt-deepseek = { path = "../providers/deepseek", optional = true, default-features = false, features = ["api"] }

serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
log.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "macros", "io-util", "net"] }
once_cell = "1.20"
parking_lot = "0.12"
libc = "0.2"
rmcp = { version = "1.0", features = ["client", "transport-async-rw", "elicitation"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.22"
rustls-platform-verifier = "0.7.0"
ndk-context = "0.1.1"

[build-dependencies]
