[package]
name = "querymt-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PyO3 bindings for QueryMT"

[lib]
name = "querymt"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
base64.workspace = true
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.23", features = ["attributes", "tokio-runtime"] }
querymt = { path = "../querymt", default-features = false, features = ["desktop"] }
querymt-remote = { path = "../querymt-remote", features = ["kameo-mesh"] }
querymt-utils = { path = "../querymt-utils", features = ["providers"] }
serde_json.workspace = true
tokio = { version = "1.0", features = ["rt-multi-thread", "sync"] }
futures-util = "0.3"
log.workspace = true

[package.metadata.maturin]
name = "querymt"
