[package]
name = "querymt"
version = "0.1.3"
edition = "2021"
description = "A Rust library unifying multiple LLM backends."
license = "MIT"
authors = [
    "Viktor Gal <viktor@query.mt>"
]
repository = "https://github.com/querymt/querymt"
homepage = "https://query.mt"

[features]
default = ["http-client", "mcp", "extism_host", "tracing"]
http-client = []
reqwest-client = ["reqwest", "tokio", "once_cell"]
native = ["libloading", "once_cell"]
mcp = ["rmcp", "toml", "tokio", "jsonschema"]
extism_host = ["dep:extism", "docker_credential", "sigstore", "oci-client", "tar", "flate2", "sha2", "serde_yaml", "dirs", "hex"]
extism_plugin = []
tracing = ["dep:tracing"]

[dependencies]
anyhow = "1.0"
serde.workspace = true
serde_json.workspace = true
serde-value.workspace = true
async-trait.workspace = true
uuid = { version = "1.0", optional = true, features = ["v4"] }
schemars.workspace = true
base64.workspace = true
futures = "0.3"
either.workspace = true
url.workspace = true
http.workspace = true
libloading = { version = "0.8", optional = true}
rmcp = { version = "0.9", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest", "transport-sse-client-reqwest"], optional = true }
toml = { version = "0.9", optional = true}
thiserror = "1.0"
extism = { version = "1.11", optional = true}
docker_credential = { version = "1.3", optional = true }
sigstore = { version = "0.13", default-features = false, features = ["cosign", "verify", "bundle", "rustls-tls", "sigstore-trust-root"], optional = true }
oci-client = { version = "0.15", default-features = false, optional = true, features = ["rustls-tls"] }
flate2 = { version = "1.1.1", optional = true }
tar = { version = "0.4.44", optional = true }
sha2 = { version = "0.10.8", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
dirs = { version ="6.0", optional = true }
hex = { version = "0.4", optional = true }
log.workspace = true
tracing = { workspace = true, optional = true }
which = "8.0.0"
jsonschema = { version = "0.33", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true}
once_cell = { version = "1.21.3", optional = true}

#[target.'cfg(target_arch = "wasm32")'.dependencies]
#gloo-net = { version = "0.6", features = ["http"] }
#wasm-bindgen-futures = "0.4"

[lib]
name = "querymt"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
