[package]
name = "querymt"
version.workspace = true
edition.workspace = true
description = "A Rust library unifying multiple LLM backends."
license.workspace = true
authors = [
    "Viktor Gal <viktor@query.mt>"
]
repository = "https://github.com/querymt/querymt"
homepage = "https://query.mt"

[features]
default = ["http-client", "mcp", "extism_host", "tracing"]
http-client = ["reqwest", "tokio", "once_cell", "http-serde-ext"]
reqwest-client = ["http-client"]
native = ["libloading", "once_cell"]
mcp = ["rmcp", "toml", "tokio", "jsonschema", "reqwest"]
extism_host = ["dep:extism", "docker_credential", "sigstore", "oci-client", "tar", "flate2", "sha2", "serde_yaml", "dirs", "hex", "reqwest-client", "tempfile"]
extism_plugin = ["http-serde-ext"]
tracing = ["dep:tracing"]

[dependencies]
anyhow = "1.0"
serde.workspace = true
serde_json.workspace = true
serde-value.workspace = true
async-trait.workspace = true
uuid = { version = "1.0", optional = true, features = ["v4"] }
schemars.workspace = true
base64.workspace = true
futures = "0.3"
either.workspace = true
url.workspace = true
http.workspace = true
libloading = { version = "0.8", optional = true}
rmcp = { version = "1.0", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"], optional = true }
toml = { workspace = true, optional = true}
thiserror = "1.0"
extism = { version = "1.11", optional = true}
docker_credential = { version = "1.3", optional = true }
sigstore = { version = "0.13", default-features = false, features = ["cosign", "verify", "bundle", "rustls-tls", "sigstore-trust-root"], optional = true }
oci-client = { version = "0.15", default-features = false, optional = true, features = ["rustls-tls"] }
flate2 = { version = "1.1.1", optional = true }
tar = { version = "0.4.44", optional = true }
# TODO: upgrade to stable sha2 0.11.x once iroh-base drops its exact pin on
# digest =0.11.0-rc.10 (likely iroh-base >=0.98). See: iroh 0.97 forces
# pre-release crypto crates which conflict with stable sha2/digest.
sha2 = { version = "=0.11.0-rc.2", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
dirs = { version ="6.0", optional = true }
hex = { version = "0.4", optional = true }
tempfile = { version = "3.0", optional = true }
log.workspace = true
tracing = { workspace = true, optional = true }
which = "8.0.0"
jsonschema = { version = "0.45", optional = true }
http-serde-ext = { workspace = true, optional = true }
bytes = "1.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"], optional = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"], optional = true}
once_cell = { version = "1.21.3", optional = true}

#[target.'cfg(target_arch = "wasm32")'.dependencies]
#gloo-net = { version = "0.6", features = ["http"] }
#wasm-bindgen-futures = "0.4"

[lib]
name = "querymt"
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
