[package]
name = "querymt-worker"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "Sandboxed worker process for querymt agent sessions"

[[bin]]
name = "querymt-worker"
path = "src/main.rs"

[lib]
name = "querymt_worker"
path = "src/lib.rs"

[dependencies]
querymt-agent = { path = "../agent", features = ["remote", "sandbox"] }
querymt = { path = "../querymt" }
querymt-sandbox = { path = "../sandbox" }
nono = "0.6"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
serde_json = "1.0"
kameo = "0.19"
log.workspace = true

[dev-dependencies]
tempfile = "3"
