[package]
name = "querymt_actix_cancel"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
actix = "0.13"
actix-rt = "2.10"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
querymt = { path = "../../crates/querymt", features = ["reqwest-client"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

futures-util = "0.3"
